--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gray
-email: email@email.com
+title: Kwonyezy_title
+email: kwonyezy@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Lorem Ipsum
-url: "https://brunofolle.com.br" # the base hostname & protocol for your site, e.g. http://example.com
+  Kwonyezy_description
+url: "https://kwonyezy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
 # Build settings
