--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ emailform: email@email.com
 disqus_user: 
 
 #about-me
-aboutme: Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, odit? Quibusdam atque laudantium debitis, officia esse nobis dolor, dolorem error eum, eos ea. Illum quae recusandae deserunt quo, minus ex!
+aboutme: 권예지의 개발일지 입니다!
 aboutmeimg: https://www.placecage.com/150/150
