--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 theme: gray
 permalink: /:title/
 plugins:
