--- a/_config.yml
+++ b/_config.yml
@@ -83,4 +83,4 @@ disqus_user:
 
 #about-me
 aboutme: 권예지의 개발일지 입니다!
-aboutmeimg: https://www.placecage.com/150/150
+aboutmeimg: https://github.com/kwonyezy/kwonyezy.github.io/blob/master/_posts/pictures/img.jpeg?raw=true
