--- a/_config.yml
+++ b/_config.yml
@@ -82,5 +82,5 @@ emailform: email@email.com
 disqus_user: 
 
 #about-me
-aboutme: 권예지의 개발일지 입니다!
+aboutme: kwonyezy@gmail.com
 aboutmeimg: https://github.com/kwonyezy/kwonyezy.github.io/blob/master/_posts/pictures/img.jpeg?raw=true
