--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ googleverify: ''
 emailform: email@email.com
 
 #disqus 
-disqus_user: disqus_ed2tD4zj4o
+disqus_user: https-kwonyezy-github-io
 
 #about-me
 aboutme: kwonyezy@gmail.com
