--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,8 @@ emailform: email@email.com
 
 #disqus 
 disqus_user: https-kwonyezy-github-io
+disqus_url: disqus.com/by/disqus_ed2tD4zj4o
+disqus_id: kwonyezy
 
 #about-me
 aboutme: kwonyezy@gmail.com
