--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Kwonyezy_title
+title: Kwonyezy
 email: kwonyezy@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Kwonyezy_description
+  Java developer
 url: "https://kwonyezy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
 
