Update _config.yml 20240607
To change theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Kwonyezy
 email: kwonyezy@naver.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Java developer
-url: "https://kwonyezy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://kwonyezy.github.io"
+baseurl: "/"
 
 # Build settings
 markdown: kramdown
 kramdown:
   input: GFM
   syntax_highlighter: rouge
-theme: gray
+theme: jekyll-theme-satellite
 permalink: /:title/
 plugins:
   - jekyll-feed
@@ -33,14 +19,10 @@ plugins:
   - jekyll-seo-tag
   - jekyll-paginate
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
 exclude: [
   'Gemfile', 
   'Gemfile.lock', 
   'node_modules', 
-  'Gemfile',
   'gray.gemspec',
   'Gulpfife.js', 
   'package.json',
@@ -51,14 +33,11 @@ exclude: [
   '.gitignore'
 ]
 
-#number posts for paginate
 paginate: 20
 paginate_path: /page/:num
 locale: EN
 
-#new variables:
-
-#social newtworks
+# Social networks
 facebookurl: ''
 twitterurl: ''
 youtubeurl: ''
@@ -66,23 +45,23 @@ stackoverflowurl: ''
 githuburl: ''
 instagramurl: ''
 
-#for analitycs
+# For analytics
 idanalitycs: ''
 
-#language site
+# Language site
 language: ''
 
-#google verification
+# Google verification
 googleverify: ''
 
-#email formspree
+# Email formspree
 emailform: email@email.com
 
-#disqus 
+# Disqus 
 disqus_user: https-kwonyezy-github-io
 disqus_url: disqus.com/by/disqus_ed2tD4zj4o
 disqus_id: kwonyezy
 
-#about-me
+# About me
 aboutme: kwonyezy@gmail.com
 aboutmeimg: https://github.com/kwonyezy/kwonyezy.github.io/blob/master/_posts/pictures/img.jpeg?raw=true
