--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3  # Node.js 20을 사용하는 최신 버전
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7' # 필요한 경우 Jekyll에 맞는 Ruby 버전으로 수정
+        ruby-version: '2.7'  # 필요한 경우 Jekyll에 맞는 Ruby 버전으로 수정
 
     - name: Install dependencies
       run: |
