--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,6 @@ profile_img: "/assets/img/profile.webp"
 # Social Links
 email: kwonyezy@naver.com
 github_username: kwonyezy
-# twitter_username: twitter
-# instagram_username: instagram
-# linkedin_username: linkedin
-# facebook_username: facebook
 
 # External API
 giscus_repo: "kwonyezy/kwonyezy.github.io"
@@ -17,23 +13,15 @@ giscus_repoId: "R_kgDOJ6fqWg"
 giscus_category: "Q&A"
 giscus_categoryId: "DIC_kwDOJ6fqWs4Cc7p7"
 
-# 웹사이트의 방문자 트래픽을 추적하고 분석하는 도구 / 추후 적용 예정
-# goatcounter_code: your_goatcounter_code # 자신의 코드로 변경
-# google_analytics: your_google_analytics_code # 자신의 코드로 변경
-
-# If your repo name follows the format "<user-name>.github.io", then leave the below blank.
-# Otherwise, set its value as "/<repo-name>". ex) baseurl: /myblog
 baseurl: ""
 
-# Theme 설정
 theme: jekyll-theme-satellite
 
-# Build settings
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-seo-tag
-  - jekyll-loading-lazy
+  - jekyll-paginate
 
 exclude:
   - docs/
@@ -52,7 +40,6 @@ defaults:
       layout: "page"
       date: "2024-06-07" # 오늘 날짜로 설정
 
-# Markdown newline activator 
 kramdown:
   input: GFM
   hard_wrap: true
